--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl 1",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~5.0.0",
     "@angular/platform-browser-dynamic": "~5.0.0",
     "@angular/router": "~5.0.0",
+    "auth0-js": "^9.6.1",
     "core-js": "~2.4.1",
     "express": "~4.10.0",
     "hammerjs": "~2.0.8",
@@ -34,10 +35,10 @@
     "@angular/cli": "~1.5.0",
     "@angular/compiler-cli": "~5.0.0",
     "@angular/language-service": "~5.0.0",
+    "@types/express": "~4.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "@types/express": "~4.0.36",
     "@types/socket.io-client": "~1.4.29",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
@@ -51,6 +52,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.5.0"
+    "typescript": "^2.4.2"
   }
 }
