--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ngsw-config": "node_modules/.bin/ngsw-config dist src/ngsw-config.json",
-    "ngsw-copy": "cp node_modules/@angular/service-worker/ngsw-worker.js dist/",
-    "build-prod-ngsw": "ng build --prod && npm run ngsw-copy",
-    "serve-prod-ngsw": "npm run build-prod-ngsw && http-server dist -p 8080"
+    "build:prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +29,7 @@
     "core-js": "~2.4.1",
     "express": "~4.10.0",
     "hammerjs": "~2.0.8",
+    "http-server": "^0.11.1",
     "rxjs": "~5.5.2",
     "socket.io": "~2.0.3",
     "zone.js": "~0.8.14"
