--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/express": "~4.0.36",
-    "@types/socket.io": "~1.4.29",
-    "express": "~4.10.0",
-    "socket.io": "~2.0.3"
+    "@types/express": "~4.16.0",
+    "@types/socket.io": "~1.4.38",
+    "express": "~4.16.4",
+    "socket.io": "~2.1.1"
   },
   "devDependencies": {
     "gulp": "~3.9.1",
-    "gulp-typescript": "~3.2.1",
-    "typescript": "~2.5.0"
+    "gulp-typescript": "~5.0.0-alpha.3",
+    "typescript": "~3.1.3"
   }
 }
